feat: add PRINT output and metadata to API response
- Create ExecutionResult class to wrap procedure results with metadata
- API response now includes:
  - "result": the return value
  - "output": array of PRINT statement outputs (if any)
  - "_meta": execution_id, duration_ms, procedure_name
- Update RestRunEScriptAction to handle ExecutionResult
- Add createEnrichingListener to ElasticScriptExecutor
- Add unit tests for ExecutionResult class

Co-authored-by: Cursor <cursoragent@cursor.com>