@@ -1,77 +1,150 @@
 /*
- * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the Elastic License
- * 2.0; you may not use this file except in compliance with the Elastic License
- * 2.0.
+ * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V.
+ * under one or more contributor license agreements. Licensed under
+ * the Elastic License 2.0; you may not use this file except in compliance
+ * with the Elastic License 2.0.
  */
 
 package org.elasticsearch.xpack.escript.primitives;
 
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 
 /**
- * Encapsulates the result of an elastic-script execution, including:
- * - The procedure's return value
- * - Captured PRINT output
- * - Execution metadata (ID, duration)
+ * Represents the complete result of an elastic-script execution.
+ * 
+ * This class encapsulates:
+ * - The actual return value (if any)
+ * - All PRINT output captured during execution
+ * - Execution metadata (execution ID, duration, etc.)
+ * 
+ * This enables the API to return structured responses with observability data.
  */
 public class ExecutionResult {
-
+    
     private final Object result;
-    private final List<String> output;
+    private final List<String> printOutput;
     private final String executionId;
     private final long durationMs;
-
-    public ExecutionResult(Object result, List<String> output, String executionId, long durationMs) {
+    private final String procedureName;
+    
+    /**
+     * Creates a new ExecutionResult.
+     * 
+     * @param result The return value of the execution (may be null)
+     * @param printOutput List of PRINT statement outputs captured during execution
+     * @param executionId The unique execution ID for tracing
+     * @param durationMs Execution duration in milliseconds
+     * @param procedureName The name of the executed procedure (may be null for ad-hoc scripts)
+     */
+    public ExecutionResult(Object result, List<String> printOutput, String executionId, long durationMs, String procedureName) {
         this.result = result;
-        this.output = output != null ? output : Collections.emptyList();
+        this.printOutput = printOutput != null ? List.copyOf(printOutput) : Collections.emptyList();
         this.executionId = executionId;
         this.durationMs = durationMs;
+        this.procedureName = procedureName;
     }
-
+    
     /**
-     * The procedure's return value.
+     * Creates a simple ExecutionResult with just a result value.
+     * Used for backwards compatibility when metadata is not needed.
+     */
+    public static ExecutionResult of(Object result) {
+        return new ExecutionResult(result, Collections.emptyList(), null, 0, null);
+    }
+    
+    /**
+     * Creates an ExecutionResult from context and raw result.
+     */
+    public static ExecutionResult from(Object rawResult, String executionId, List<String> printOutput, 
+                                       long startTimeMs, String procedureName) {
+        long durationMs = System.currentTimeMillis() - startTimeMs;
+        return new ExecutionResult(rawResult, printOutput, executionId, durationMs, procedureName);
+    }
+    
+    /**
+     * Gets the actual return value of the execution.
+     * This unwraps ReturnValue if necessary.
      */
     public Object getResult() {
+        if (result instanceof ReturnValue) {
+            return ((ReturnValue) result).getValue();
+        }
         return result;
     }
-
+    
     /**
-     * Captured PRINT statement output.
+     * Gets the raw result without unwrapping.
      */
-    public List<String> getOutput() {
-        return output;
+    public Object getRawResult() {
+        return result;
     }
-
+    
     /**
-     * The execution ID for log/trace correlation.
+     * Gets all PRINT output captured during execution.
+     */
+    public List<String> getPrintOutput() {
+        return printOutput;
+    }
+    
+    /**
+     * Checks if there is any PRINT output.
+     */
+    public boolean hasPrintOutput() {
+        return !printOutput.isEmpty();
+    }
+    
+    /**
+     * Gets the execution ID for tracing correlation.
      */
     public String getExecutionId() {
         return executionId;
     }
-
+    
     /**
-     * The execution duration in milliseconds.
+     * Gets the execution duration in milliseconds.
      */
     public long getDurationMs() {
         return durationMs;
     }
-
+    
     /**
-     * Returns true if there is PRINT output to display.
+     * Gets the procedure name, if known.
      */
-    public boolean hasOutput() {
-        return output != null && !output.isEmpty();
+    public String getProcedureName() {
+        return procedureName;
     }
-
-    @Override
-    public String toString() {
-        return "ExecutionResult{" +
-            "executionId='" + executionId + '\'' +
-            ", durationMs=" + durationMs +
-            ", outputLines=" + output.size() +
-            ", result=" + result +
-            '}';
+    
+    /**
+     * Converts this result to a map for JSON serialization.
+     * Includes result, output, and metadata.
+     */
+    public Map<String, Object> toMap() {
+        java.util.Map<String, Object> map = new java.util.LinkedHashMap<>();
+        
+        // Always include result
+        map.put("result", getResult());
+        
+        // Include output only if present
+        if (hasPrintOutput()) {
+            map.put("output", printOutput);
+        }
+        
+        // Include metadata
+        java.util.Map<String, Object> meta = new java.util.LinkedHashMap<>();
+        if (executionId != null) {
+            meta.put("execution_id", executionId);
+        }
+        meta.put("duration_ms", durationMs);
+        if (procedureName != null) {
+            meta.put("procedure_name", procedureName);
+        }
+        
+        if (!meta.isEmpty()) {
+            map.put("_meta", meta);
+        }
+        
+        return map;
     }
 }
